tests/invalid/set_compare_type_mismatch/main.py
def run_case() -> None:
    a: set[int] = {1, 2}
    b: set[float] = {1.0, 2.0}
    bad: bool = a == b


if __name__ == "__main__":
    run_case()
